force-app/main/default/objects/CJFW_CommSearchData__c/CJFW_CommSearchData__c.object-meta.xml
<CustomObject>
    <description>[P2]공통필터 , 공통리스트 에 가져올 데이터를 담아주는 object</description>
    <label>CJFW_CommSearchData</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>CommSearchData</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>