force-app/main/default/objects/CJFW_CommSearchData__c/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <description>Object의 api name 값</description>
    <label>ApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>