force-app/main/default/objects/CJFW_CommSearchData__c/fields/DatePoint__c.field-meta.xml
<CustomField>
    <fullName>DatePoint__c</fullName>
    <label>날짜시점</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieldType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>start</fullName>
                <label>시작</label>
            </value>
            <value>
                <fullName>end</fullName>
                <label>종료</label>
            </value>
            <value>
                <fullName>one</fullName>
                <label>단일</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>