force-app/main/default/objects/CJFW_CommSearchData__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>설명란</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>