force-app/main/default/objects/CJFW_CommSearchData__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>편집가능여부 ( true-편집불가 / false-편집가능)</description>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>