force-app/main/default/objects/CJFW_CommSearchData__c/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <label>FieldType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>search</fullName>
            </value>
            <value>
                <fullName>customComboBox</fullName>
            </value>
            <value>
                <fullName>customAccountModal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>