force-app/main/default/objects/CJFW_CommSearchData__c/fields/HeaderLine__c.field-meta.xml
<CustomField>
    <fullName>HeaderLine__c</fullName>
    <description>header Filter 에서 노출되는 Line을 지정할 수 있다. 
1이면 첫번째라인에 노출 , 
2이면 두번째라인에 노출 , 
3이면 세번째라인에 노출
4이면 세번째라인에 노출</description>
    <label>HeaderLine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>