force-app/main/default/objects/CJFW_CommSearchData__c/fields/HeaderOrderBy__c.field-meta.xml
<CustomField>
    <fullName>HeaderOrderBy__c</fullName>
    <description>목록에서 찾기 편하도록 header list Line + list OrderLine 조합표기</description>
    <formula>TEXT(HeaderLine__c) + &quot;-&quot; + TEXT(HeadFilterOrder__c)</formula>
    <label>HeaderOrderBy</label>
    <type>Text</type>
</CustomField>