force-app/main/default/objects/CJFW_CommSearchData__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>true - 활성 , false -비활성</description>
    <label>활성여부</label>
    <type>Checkbox</type>
</CustomField>