force-app/main/default/objects/CJFW_CommSearchData__c/fields/IsMobile__c.field-meta.xml
<CustomField>
    <fullName>IsMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>모바일 노출여부 (true-노출 / false-노출안함)</description>
    <label>IsMobile</label>
    <type>Checkbox</type>
</CustomField>