force-app/main/default/objects/CJFW_CommSearchData__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>노출하고자하는 라벨</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>