force-app/main/default/objects/CJFW_CommSearchData__c/fields/MenuName__c.field-meta.xml
<CustomField>
    <fullName>MenuName__c</fullName>
    <description>사용하는 매뉴의 이름
해당값에 의해 데이터 가져와짐</description>
    <label>메뉴명</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>매출원장</fullName>
            </value>
            <value>
                <fullName>기타매출관리</fullName>
            </value>
            <value>
                <fullName>매출채권현황리포트</fullName>
            </value>
            <value>
                <fullName>체인판매수수료정산현황조회</fullName>
            </value>
            <value>
                <fullName>일자별매출채권리포트</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>