force-app/main/default/objects/CJFW_CommSearchData__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object 명</description>
    <label>Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>