force-app/main/default/objects/CJFW_CommSearchData__c/fields/OptionLabel__c.field-meta.xml
<CustomField>
    <fullName>OptionLabel__c</fullName>
    <description>selectbox 에서 노출될 옵션 라벨정보</description>
    <label>OptionLabel</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>