force-app/main/default/objects/CJFW_CommSearchData__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(필수여부 True - 필수 / False -  필수아님)</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>