force-app/main/default/objects/CJFW_CommSearchData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>ApiName__c</columns>
    <columns>FieldType__c</columns>
    <columns>Label__c</columns>
    <columns>Object__c</columns>
    <columns>Disabled__c</columns>
    <columns>IsMobile__c</columns>
    <columns>Required__c</columns>
    <columns>Description__c</columns>
    <columns>HeaderLine__c</columns>
    <columns>HeadFilterOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>