force-app/main/default/objects/CJFW_CommSearchData__c/listViews/HeaderTypeSearchData.listView-meta.xml
<ListView>
    <fullName>HeaderTypeSearchData</fullName>
    <columns>NAME</columns>
    <columns>MenuName__c</columns>
    <columns>Type__c</columns>
    <columns>FieldType__c</columns>
    <columns>Label__c</columns>
    <columns>ApiName__c</columns>
    <columns>Object__c</columns>
    <columns>HeaderLine__c</columns>
    <columns>HeadFilterOrder__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Header</value>
    </filters>
    <label>HeaderType SearchData</label>
</ListView>