force-app/main/default/objects/CJFW_CommSearchData__c/listViews/ListTypeSearchData.listView-meta.xml
<ListView>
    <fullName>ListTypeSearchData</fullName>
    <columns>NAME</columns>
    <columns>MenuName__c</columns>
    <columns>Type__c</columns>
    <columns>ApiName__c</columns>
    <columns>Label__c</columns>
    <columns>Object__c</columns>
    <columns>ListOrder__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>List,All</value>
    </filters>
    <label>ListType SearchData</label>
</ListView>