force-app/main/default/objects/CJFW_CommSearchData__c/listViews/MenuTab.listView-meta.xml
<ListView>
    <fullName>MenuTab</fullName>
    <columns>NAME</columns>
    <columns>MenuName__c</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>HeaderLine__c</columns>
    <columns>HeadFilterOrder__c</columns>
    <columns>HeaderOrderBy__c</columns>
    <columns>ListOrder__c</columns>
    <columns>ApiName__c</columns>
    <columns>FieldType__c</columns>
    <columns>Object__c</columns>
    <columns>Disabled__c</columns>
    <columns>IsMobile__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MenuName__c</field>
        <operation>equals</operation>
        <value>일자별매출채권리포트</value>
    </filters>
    <label>메뉴탭별 리스트</label>
</ListView>